# vast

./: .gitignore  BUILD  CMakeLists.txt  Class.puml  README.md  argparse.h  clean.sh  common.h  joining_thread.h  logger.h  main.cpp  run.sh  star_wars.h  storage_station.cpp  storage_station.h  threadsafe_queue.h  time_keeper.cpp  time_keeper.h  time_keeper_test.cpp  truck.cpp  truck.h  version.h  version.h.in
docs/: Class.puml  State.puml
scripts/: clean.sh  run.sh  run_tests.sh
